<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/empty_doghouse">

    <ImageView
        android:id="@+id/goofy"
        android:layout_width="161dp"
        android:layout_height="186dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dog_removebg_preview" />

    <Button
        android:id="@+id/feedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="482dp"
        android:text="@string/feedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="16dp"
        android:text="@string/playButton"
        app:layout_constraintBottom_toTopOf="@+id/feedCount"
        app:layout_constraintEnd_toStartOf="@+id/cleanButton"
        app:layout_constraintStart_toEndOf="@+id/feedButton" />

    <Button
        android:id="@+id/cleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="482dp"
        android:layout_marginEnd="37dp"
        android:text="@string/cleanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hungerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="31dp"
        android:text="@string/textHunger"
        app:layout_constraintBottom_toTopOf="@+id/playTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/textHappy"
        app:layout_constraintBottom_toTopOf="@+id/cleanTextiew"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cleanTextiew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="71dp"
        android:text="@string/textClean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/feedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="31dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/playCount"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/playCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="28dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/cleanCount"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cleanCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="68dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>